# mcp-scrape

./: .env.example  .gitignore  Dockerfile  README.md  README_IMPROVED.md  install_playwright.py  pyproject.toml  requirements.txt  test_server.py
src/: main.py  main_v2.py  utils.py  vector_store.py
src/scrapers/: __init__.py  firecrawl_scraper.py  http_scraper.py  orchestrator.py  playwright_scraper.py  serper_searcher.py
