[project]
name = "mcp_scrape"
version = "1.0.0"
description = "SEAL Team Six-grade web scraping MCP server with military precision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # MCP Framework
    "mcp[cli]>=1.3.0",
    
    # Core dependencies
    "httpx>=0.28.1",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    
    # Scraping tools
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "playwright>=1.40.0",
    "chardet>=5.2.0",
    
    # Data processing
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    
    # Optional: Vector storage
    "vecs>=0.4.5",
    "supabase>=2.0.0",
    
    # Optional: LLM integration
    "openai>=1.0.0",
    "anthropic>=0.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true